fixed spacing issue where portfolio images did not have enough bottom margin on smaller displays

--- a/assets/style.css
+++ b/assets/style.css
@@ -32,12 +32,9 @@ body {
     margin-right: 10px;
 }
 
-.portfolio-row{
-    margin-bottom: 25px;
-}
-
 .portfolio-img{
     width: 350px;
     height: 350px;
+    margin-bottom: 25px;
 }
 
